--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,9 +45,6 @@
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title" id="creatCustomerModalLabel">Add new customer</h5>
-              <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button> -->
             </div>
             <div class="modal-body">
               <div class="formBody" style="margin: 15px;">
@@ -112,6 +109,7 @@
               </div>
             </div>
             <div class="modal-footer">
+              <p style="font-size: 12px;text-align: left;position: absolute;left: 14px;">Requirements: All fields must be inserted | Zip code must be 4 digits</p>
               <button type="button" class="btn btn-secondary closeModalBtn" data-dismiss="modal">Close</button>
               <button type="button" class="btn btn-primary" id="createCustomer">Create Customer</button>
             </div>
