--- a/views/index.ejs
+++ b/views/index.ejs
@@ -302,6 +302,24 @@
       </div>
     </div>
     
+    <footer id="siteFooter">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="copyRightText" style="text-align: center;">
+            <span>© C.M.A Copyright 2022, Michael Barreiro</span>
+          </div>
+        </div>
+        <div class="col-md-4"></div>
+        <div class="col-md-4">
+          <div id="technologies">
+            <img class="mongoTech" src="img/mongodb-img.svg" />
+            <img class="nodeTech" src="img/node-js-icon-29.png" />
+            <img class="jstech" src="img/js-image.jpeg" />
+          </div>
+        </div>
+      </div>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     <script type="text/javascript" src="/js/jquery.js" ></script>
     <script type="text/javascript" src="/js/jquery.cookie.js" ></script>
