--- a/public/css/main.css
+++ b/public/css/main.css
@@ -235,7 +235,7 @@ td > span {white-space: nowrap;}
     position: absolute;
     width: 100%;
     bottom: 0;
-    font-size: 12px;
+    font-size: 10px;
     padding: 5px;
 }
 
@@ -260,4 +260,7 @@ td > span {white-space: nowrap;}
     line-height: 63px;
     width: fit-content;
     margin: auto;
+    background-color: #c8c8c8;
+    padding: 3px;
+    border-radius: 6px;
 }
